# rust_sound_synthesizer

./: Cargo.toml
res/: anthem_ua.json
src/: audio_backend.rs  main.rs
