[package]
name = "pulse_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.psimple]
version = "2.25.0"
package = "libpulse-simple-binding"

[dependencies.pulse]
version = "2.0"
package = "libpulse-binding"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
hound = "3.4.0"
